--- a/index.html
+++ b/index.html
@@ -39,6 +39,14 @@
           </div>
       
           <hr/>
+          <p>
+            The report placeholder
+        </p>
+
+
+          <hr/>
+
+
           <select id="leave" onchange="leaveChange()">
             <option value="0">ALL</option>
             <option value="1">AAPL</option>
