--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
        
           <div id="container3"></div>
 
+          <p>
+            The report placeholder
+        </p>
+
         </main>
     </body>
 </html>
