--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <body>
         <main>
             
-            <h1 class='upperimages'>CMPT 732 Final Project: Stock Index Prediction</h1>
+            <h1 class='upperimages'>CMPT 732 Final Project: Stock Portfolio Recommendation</h1>
             <h2 class='upperimages'>Yuke Wang, Zheng Wu, Tiange Wan</h2>
            
               </div>
