--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <script src="https://code.highcharts.com/modules/exporting.js"></script>
 <script src="https://code.highcharts.com/modules/export-data.js"></script>
 <script src='trial.js'></script>
-<script src="jquery-3.5.1.min.js"></script>
 <link href='trial.css' rel="stylesheet" type='text/css'>
 <link href="https://fonts.googleapis.com/css?family=Montserrat%7CPaytone+One&display=swap" rel="stylesheet" />
 
@@ -41,12 +40,16 @@
 
 
           <select id="leave" onchange="leaveChange()">
-            <option value="0">ALL</option>
-            <option value="1">AAPL</option>
-            <option value="2">MSFT</option>
-            <option value="3">GOOG</option>
-            <option value="4">AMZN</option>
-            <option value="5">TSLA</option>
+            <option value="AAPL">AAPL</option>
+            <option value="AMGN">AMGN</option>
+            <option value="APA">APA</option>
+            <option value="BBY">BBY</option>
+            <option value="CNC">CNC</option>
+            <option value="IPGP">IPGP</option>
+            <option value="KIM">KIM</option>
+            <option value="MMC">MMC</option>
+            <option value="NCLH">NCLH</option>
+            <option value="TFX">TFX</option>
           </select>
        
           <div id="container3"></div>
